# Android-YARA

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/android/yara/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/OpenSSL/include/crypto/: aes_platform.h  bn.h  bn_dh.h  bn_srp.h  chacha.h  cmll_platform.h  context.h  cryptlib.h  decoder.h  des_platform.h  dh.h  dsa.h  encoder.h  err.h  ess.h  evp.h  md32_common.h  modes.h  pem.h  pkcs7.h  poly1305.h  punycode.h  rand.h  riscv_arch.h  security_bits.h  siphash.h  siv.h  sm2.h  store.h  x509.h
app/src/main/cpp/OpenSSL/include/internal/: asn1.h  bio.h  constant_time.h  cryptlib.h  dane.h  e_os.h  ffc.h  ktls.h  namemap.h  numbers.h  packet.h  param_build_set.h  property.h  provider.h  refcount.h  sha3.h  sockets.h  sslconf.h  unicode.h
app/src/main/cpp/OpenSSL/include/openssl/: asn1.h  asn1t.h  bio.h  bn.h  camellia.h  cmp.h  cmperr.h  cmserr.h  conf.h  crypto.h  decoder.h  dh.h  dsa.h  e_os2.h  ec.h  encoder.h  err.h  evp.h  kdf.h  lhash.h  macros.h  modes.h  opensslv.h  ossl_typ.h  pem.h  pkcs12.h  pkcs7.h  proverr.h  rand.h  rc4.h  ripemd.h  rsa.h  ssl.h  sslerr.h  store.h  tls1.h  trace.h  ts.h  types.h  x509.h  (+2 more)
app/src/main/cpp/cli/: args.c  common.c  common.h  threading.c  yara.c
app/src/main/cpp/jansson/src/: jansson_private.h  utf.h
app/src/main/cpp/libyara/: ahocorasick.c  arena.c  atoms.c  base64.c  bitmask.c  compiler.c  crypto.h  endian.c  exception.h  exec.c  exefiles.c  filemap.c  grammar.c  hash.c  hex_grammar.c  hex_lexer.c  lexer.c  libyara.c  mem.c  modules.c  notebook.c  object.c  parser.c  proc.c  re.c  re_grammar.c  re_lexer.c  rules.c  scan.c  scanner.c  simple_str.c  sizedstr.c  stack.c  stopwatch.c  stream.c  strutils.c  threading.c
app/src/main/cpp/libyara/include/yara/: ahocorasick.h  arena.h  atoms.h  base64.h  bitmask.h  compiler.h  dex.h  dotnet.h  elf.h  elf_utils.h  endian.h  exec.h  filemap.h  globals.h  hash.h  hex_lexer.h  lexer.h  libyara.h  macho.h  mem.h  modules.h  object.h  pe.h  pe_utils.h  proc.h  re.h  re_lexer.h  rules.h  scan.h  scanner.h  simple_str.h  sizedstr.h  stopwatch.h  strutils.h  types.h  unaligned.h
app/src/main/cpp/libyara/modules/console/: console.c
app/src/main/cpp/libyara/modules/cuckoo/: cuckoo.c
app/src/main/cpp/libyara/modules/demo/: demo.c
app/src/main/cpp/libyara/modules/dex/: dex.c
app/src/main/cpp/libyara/modules/dotnet/: dotnet.c
app/src/main/cpp/libyara/modules/elf/: elf.c
app/src/main/cpp/libyara/modules/hash/: hash.c
app/src/main/cpp/libyara/modules/macho/: macho.c
app/src/main/cpp/libyara/modules/magic/: magic.c
app/src/main/cpp/libyara/modules/math/: math.c
app/src/main/cpp/libyara/modules/pb_tests/: pb_tests.c  pb_tests.pb-c.c  pb_tests.pb-c.h
app/src/main/cpp/libyara/modules/pe/: pe.c  pe_utils.c
app/src/main/cpp/libyara/modules/pe/authenticode-parser/: authenticode.c  certificate.c  certificate.h  countersignature.c  countersignature.h  helper.c  helper.h  structs.h
app/src/main/cpp/libyara/modules/string/: string.c
app/src/main/cpp/libyara/modules/tests/: tests.c
app/src/main/cpp/libyara/modules/time/: time.c
app/src/main/cpp/libyara/proc/: freebsd.c  linux.c  mach.c  none.c  openbsd.c  windows.c
app/src/main/cpp/libyara/tlshc/: tlsh.c  tlsh_impl.c  tlsh_impl.h  tlsh_util.c
app/src/main/java/com/android/yara/: YaraScanActivity.java
app/src/main/java/com/android/yara/adapter/: ScanResultAdapter.java
app/src/main/java/com/android/yara/model/: ScanResult.java
app/src/main/res/drawable/: ic_chevron_down_24.xml  ic_delete_24.xml  ic_file_24.xml  ic_folder_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_play_24.xml  ic_rule_folder_24.xml  ic_safe_24.xml
app/src/main/res/layout/: activity_yara_scan.xml  item_scan_result.xml  item_scan_result_safe.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/yara/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
